--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline
+name: CI
 
 on:
   push:
@@ -7,22 +7,21 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest 
+
+    runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout project
-      uses: actions/checkout@v3 
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
       with:
-        node-version: '18' 
+        java-version: '17'
+       
 
-    - name: Install dependencies
-      run: npm install 
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
 
-    - name: Build the project
-      run: npm run build 
-
-    - name: Run tests
-      run: npm test 
+    - name: Run unit tests
+      run: mvn test
